maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:28: error: ':' expected but '.' found.
def isDirectionFree(Direction.NORTH ) {
                             ^Escaper:42: error: identifier expected but '}' found.
}
^